# pop2piano

./: .gitignore  README.md  pyproject.toml
src/pop2piano/: __init__.py  audio.py  beat.py  model.py  tokenizer.py  transformer.py
src/pop2piano/config/: __init__.py  default.yaml
src/pop2piano/layers/: __init__.py  mel.py
